--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                   Merries
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="https/smookey.html" target="_blank">Smookey</a></li>
-                  <li><a class="dropdown-item" href="http/noa.html" target="_blank">Noa</a></li>
+                  <li><a class="dropdown-item" href="html/smokey.html" target="_blank">Smookey</a></li>
+                  <li><a class="dropdown-item" href="html/noa.html" target="_blank">Noa</a></li>
                   <li><a class="dropdown-item" href="html/olivia.html" target="_blank">Olivia</a></li>
                   <li><a class="dropdown-item" href="html/faye.html" target="_blank">Faye</a></li>
                 </ul>
@@ -61,8 +61,8 @@
                   Veulens
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="https/hope.html" target="_blank">Hope</a></li>
-                  <li><a class="dropdown-item" href="http/veulennoa.html" target="_blank">Veulen Noa</a></li>
+                  <li><a class="dropdown-item" href="html/hope.html" target="_blank">Hope</a></li>
+                  <li><a class="dropdown-item" href="html/flame.html" target="_blank">Flame</a></li>
                 </ul>
                 
               </li>
